--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "actual syncing server",
   "type": "module",
   "scripts": {
-    "start": "node app",
+    "start": "ts-node-esm app",
+    "dev": "nodemon -e ts,json app",
+    "debug": "DEBUG=express:* yarn dev",
     "lint": "eslint . --max-warnings 0",
     "build": "tsc",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --trace-warnings' jest  --coverage",
@@ -19,18 +21,18 @@
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.2.0",
     "body-parser": "^1.20.1",
-    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-rate-limit": "^6.7.0",
     "express-response-size": "^0.0.3",
-    "express-session": "^1.17.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
+    "jwt-redis": "^7.0.3",
     "nordigen-node": "^1.2.3",
+    "redis": "^4.6.7",
     "redlock": "^5.0.0-beta.2",
     "uuid": "^9.0.0"
   },
@@ -51,8 +53,10 @@
     "eslint": "^8.33.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.3",
     "supertest": "^6.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.4.1"
