--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,4 +18,5 @@
     "outDir": "build"
   },
   "exclude": ["node_modules", "build", "./app-plaid.js", "coverage"],
+  "ts-node": {  "files": true, "esm": true }
 }
