--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "health-check": "node src/scripts/health-check.js"
   },
   "dependencies": {
-    "@actual-app/api": "6.1.0",
+    "@actual-app/crdt": "1.0.0",
     "@actual-app/web": "23.6.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.2.0",
