--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       # Uncomment any of the lines below to set configuration options.
       # - ACTUAL_HTTPS_KEY=/data/selfhost.key
       # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
+      # - ACTUAL_FILE_SYNC_LIMIT=20
+      # - ACTUAL_SYNC_ENCRYPTED_FILE_LIMIT=50
+      # - ACTUAL_FILE_LIMIT=20
       # See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
       # !! If you are not using any of these options, remove the 'environment:' tag entirely.
     volumes:
