--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "supertest": "^6.3.1",
     "typescript": "^4.9.5"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "packageManager": "yarn@4.0.1"
 }
