--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,17 @@ version: '3'
 services:
   actual_server:
     image: registry.internaleb.com/actualbudget/actual-server:latest
+    restart: always
+    build:
+
+      context: .
     ports:
       # This line makes Actual available at port 5006 of the device you run the server on,
       # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
       - '5006:5006'
+      - '9229:9229'
     volumes:
       # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
       # '/data' is the path Actual will look for its files in by default, so leave that as-is.
       - ./actual-data:/data
-    restart: unless-stopped
+    command: ['node', '--inspect=0.0.0.0:9229', 'app.js']
