--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@actual-app/crdt": "2.1.0",
     "@actual-app/web": "23.12.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^9.1.1",
     "body-parser": "^1.20.1",
