--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@actual-app/crdt": "2.1.0",
     "@actual-app/web": "23.12.0",
-    "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^9.1.1",
     "body-parser": "^1.20.1",
@@ -31,6 +30,7 @@
     "jws": "^4.0.0",
     "migrate": "^2.0.1",
     "nordigen-node": "^1.2.6",
+    "sync-request": "^6.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
