--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -16,11 +16,14 @@ env:
 
   # Creates the following tags:
   # - actual-server:latest (see docker/metadata-action flavor inputs, below)
-  # - actual-server:1.3
   # - actual-server:1.3.7
-  # - actual-server:sha-90dd603
+  # - actual-server:1.3
+  # - actual-server:1
+  # SHA tag should have already been built by the edge builder
   TAGS: |
-    type=semver,pattern={{version}}
+    type=semver,pattern={{major}}.{{minor}}.{{patch}}
+    type=semver,pattern={{major}}.{{minor}}
+    type=semver,pattern={{major}}
 
 jobs:
   build:
