--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@actual-app/crdt": "2.1.0",
-    "@actual-app/web": "24.6.0",
+    "@actual-app/web": "link:../actualextended/packages/desktop-client/",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^9.6.0",
     "body-parser": "^1.20.1",
