--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,31 @@
 services:
   actual_server:
+    ## Common tags: latest, edge (ADVANCED ONLY), lastest-alpine, edge-alpine (ADVANCED ONLY), specific version (e.g. 24.8.0, 24.8.0-alpine)
     image: docker.io/actualbudget/actual-server:latest
     ports:
-      # This line makes Actual available at port 5006 of the device you run the server on,
-      # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
+      ## This line makes Actual available at port 5006 of the device you run the server on,
+      ## i.e. http://localhost:5006. You can change the first number to change the port, if you want.
       - '5006:5006'
     environment:
-      # Uncomment any of the lines below to set configuration options.
-      # - ACTUAL_HTTPS_KEY=/data/selfhost.key
-      # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
+      ## Uncomment any of the lines below to set configuration options.
+      # - ACTUAL_HTTPS_KEY=/data/certs/selfhost.key
+      # - ACTUAL_HTTPS_CERT=/data/certs/selfhost.crt
       # - ACTUAL_PORT=5006
       # - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=20
       # - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=50
       # - ACTUAL_UPLOAD_FILE_SIZE_LIMIT_MB=20
-      # See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
-      # !! If you are not using any of these options, remove the 'environment:' tag entirely.
+      # - ACTUAL_TRUSTED_PROXIES="10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, fc00::/7, ::1/128"
+      # - ACTUAL_LOGIN_METHOD=password #header
+      # - ACTUAL_SERVER_FILES=/data/server-files
+      # - ACTUAL_USER_FILES=/data/user-files
+      # - ACTUAL_HOSTNAME=
+      # - ACTUAL_CONFIG_PATH=/data/config
+      ## ADVANCED - MOST USERS WILL NOT CHANGE
+      # - ACTUAL_WEB_ROOT=/public
+      ## See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
+      ## !! If you are not using any of these options, remove the 'environment:' tag entirely.
     volumes:
-      # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
-      # '/data' is the path Actual will look for its files in by default, so leave that as-is.
+      ## Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
+      ## '/data' is the path Actual will look for its files in by default, so leave that as-is.
       - ./actual-data:/data
     restart: unless-stopped
